@@ -11215,6 +11215,33 @@ name|remaining
 init|=
 name|length
 decl_stmt|;
+if|if
+condition|(
+name|src
+operator|.
+name|contains
+argument_list|(
+name|HdfsConstants
+operator|.
+name|SEPARATOR_DOT_SNAPSHOT_DIR_SEPARATOR
+argument_list|)
+condition|)
+block|{
+name|remaining
+operator|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|length
+argument_list|,
+name|blockLocations
+operator|.
+name|getFileLength
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 for|for
 control|(
 name|int
